test/compile_errors/err_implicit_default_mixed_branch_tail.w
//! expect-check-fail: missing return

fn maybe(flag: bool) -> i32:
    if flag:
        1

fn main:
    let _ = maybe(false)
